Linked updated css file to index html

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Lumina</title>
-<link href="/lumina.css" rel="stylesheet">
+<link href="lumina.css" rel="stylesheet">
 </head>
 <body>
 <div id="wrapper">
