Align image to the right side of page

--- a/code/index.html
+++ b/code/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 <div id="wrapper">
-	<header>
-<h1>Test Home Page</h1>
-		</header>
+	<header>		
 	<nav>
 		<a href="index.html">Lumina</a> &nbsp;
 		<a href="healthwellness.html">Health and Wellness</a> &nbsp;
@@ -21,16 +19,26 @@
 		<a href="letstalk.html">Let's Talk About It</a> &nbsp;
 		<a href="faq.html">FAQ</a>
 	</nav>
+		</header>
 	
 	<main>
-		<img src="images/HomeLandingPage.jpg" alt="Diverse Group of Elders" height="" width="" align="right">
+<!--		<div class="position_center"> -->
+			
+		<img class="img_hlp_grpelders"src="images/HomeLandingPage.jpg" alt="Diverse Group of Elders" height="600" width="600" align="">
+		
 		
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
 		
 		<h2>Exploring the World Beyond Tomorrow</h2>
-		<button class="cta-button">LIGHT UP YOUR NEXT CHAPTER</button>
+		<button class="callToAction">LIGHT UP YOUR NEXT CHAPTER</button>
 		
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
+		
+		
+		<button class="callToAction-button">Sign In</button>
+		<button class="callToAction">Register</button>
+		
+<!--			</div>-->
 		
 <!--
 		<d1>
@@ -54,12 +62,14 @@
 			
 	</main>	
 	<br>
+<!--
 	<footer>
-		<small><i>Copyright &copy; 2025 FOOTER FOOTER FOOTERr<br>
+		<small><i>Copyright &copy; 2025 FOOTER FOOTER FOOTER<br>
 			<p> This site is designed by DesignSphere</p>
 			
 			</i></small>
 	</footer>
+-->
 </div>
 </body>
 </html>
