Created a button for the footer of the page. Added css styles.

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,8 @@
 		
 		
 		<button class="callToAction-button">Sign In</button>
-		<button class="callToAction">Register</button>
+		<button class="callToAction">Register</button> <br> <br> <br>
+		<button class="footer">FOOTER FOOTER FOOTER <p>This site is designed by DesignSphere</p></button>
 		
 <!--			</div>-->
 		
@@ -65,7 +66,7 @@
 <!--
 	<footer>
 		<small><i>Copyright &copy; 2025 FOOTER FOOTER FOOTER<br>
-			<p> This site is designed by DesignSphere</p>
+			<p>This site is designed by DesignSphere</p>
 			
 			</i></small>
 	</footer>
