palced iamge on the right

--- a/code/index.html
+++ b/code/index.html
@@ -21,12 +21,12 @@
 	</nav>
 		</header>
 	
+	
+	<div class="img_hlp_grpelders">
+	<img src="images/HomeLandingPage.jpg" alt="diverse group of elderly people" height="" width="" align="">
+	</div>
 	<main>
-<!--		<div class="position_center"> -->
-			
-		<img class="img_hlp_grpelders" src="images/HomeLandingPage.jpg" alt="Diverse Group of Elders" height="600" width="600" align="">
-		
-		
+	
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
 		
 		<h2>Exploring the World Beyond Tomorrow</h2>
@@ -35,42 +35,22 @@
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
 		
 		
+<!--
 		<button class="callToAction-button">Sign In</button>
 		<button class="callToAction">Register</button> <br> <br> <br>
-		<button class="footer">FOOTER FOOTER FOOTER <p>This site is designed by DesignSphere</p></button>
-		
-<!--			</div>-->
-		
-<!--
-		<d1>
-			<dt><strong>Just Java</strong>
-			<dd>Regular house blend, decaffeinated coffee, or flavor of the day.<br>
-				Endless Cup $3.50
-			</dd>
-			</dt>
-		<dt><strong>Cafe au Lait</strong>
-			<dd>House blended coffee infused into a smooth, steamed milk.<br>
-				Single $4.00 Double $5.00
-			</dd>
-			</dt>
-		<dt><strong>Iced Cappuccino</strong>
-			<dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>
-				Single $5.00 Double $6.50
-			</dd>
-			</dt>
-		</d1>
+	  <button class="footer">FOOTER FOOTER FOOTER <p>This site is designed by DesignSphere</p></button>
 -->
-			
+
+		
 	</main>	
+	
 	<br>
-<!--
 	<footer>
-		<small><i>Copyright &copy; 2025 FOOTER FOOTER FOOTER<br>
+		<small><i>FOOTER FOOTER FOOTER<br>
 			<p>This site is designed by DesignSphere</p>
 			
 			</i></small>
 	</footer>
--->
 </div>
 </body>
 </html>
