added text box boader on footer

--- a/code/index.html
+++ b/code/index.html
@@ -25,6 +25,7 @@
 	<div class="img_hlp_grpelders">
 	<img src="images/HomeLandingPage.jpg" alt="diverse group of elderly people" height="" width="" align="">
 	</div>
+	
 	<main>
 	
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
@@ -46,10 +47,10 @@
 	
 	<br>
 	<footer>
-		<small><i>FOOTER FOOTER FOOTER<br>
-			<p>This site is designed by DesignSphere</p>
-			
-			</i></small>
+		<div class="textbox-footer">
+		<p>FOOTER FOOTER FOOTER</p> 
+	    <p>This site is designed by DesignSphere</p>	
+		</div>
 	</footer>
 </div>
 </body>
