change background colors for wrapper, nav and main to A5ACC3

--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="wrapper">
-	<header>		
+  <header>		
 	<nav>
 		<a href="index.html">Lumina</a> &nbsp;
 		<a href="healthwellness.html">Health and Wellness</a> &nbsp;
@@ -19,11 +19,11 @@
 		<a href="letstalk.html">Let's Talk About It</a> &nbsp;
 		<a href="faq.html">FAQ</a>
 	</nav>
-		</header>
+  </header>
 	
 	
 	<div class="img_hlp_grpelders">
-	<img src="images/HomeLandingPage.jpg" alt="diverse group of elderly people" height="" width="" align="">
+	<img src="images/HomeLandingPage.jpg" alt="diverse group of elderly people" height="475" width="800" align="">
 	</div>
 	
 	<main>
@@ -36,21 +36,23 @@
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
 		
 		
-<!--
 		<button class="callToAction-button">Sign In</button>
-		<button class="callToAction">Register</button> <br> <br> <br>
-	  <button class="footer">FOOTER FOOTER FOOTER <p>This site is designed by DesignSphere</p></button>
--->
+		<button class="callToAction">Register</button> 
 
 		
 	</main>	
 	
 	<br>
-	<footer>
+  <footer>
 		<div class="textbox-footer">
 		<p>FOOTER FOOTER FOOTER</p> 
 	    <p>This site is designed by DesignSphere</p>	
-		</div>
+		<img src="images/youtube 2.png" alt="youtube-icon" height="" width="" align="">
+		<img src="images/instagram.png" alt="instagram-icon" height="" width="" align="">
+		<img src="images/3d icon facebook.png" alt="facebook-icon" height="" width="" align="">
+		<img src="images/linkedin.png" alt="linkedin-icon" height="" width="" align="">
+		<img src="images/3d icon pinterest.png" alt="pinterest-icon" height="" width="" align="">
+	</div>
 	</footer>
 </div>
 </body>
