--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,7 @@
 	
 	
 	<div class="img_hlp_grpelders">
-	<img src="images/HomeLandingPage.jpg" alt="diverse group of elderly people" height="475" width="800" align="">
+	<img src="images/HomeLandingPage.jpg" alt="diverse group of elderly people" height="" width="" align="">
 	</div>
 	
 	<main>
@@ -31,13 +31,13 @@
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
 		
 		<h2>Exploring the World Beyond Tomorrow</h2>
-		<button class="callToAction">LIGHT UP YOUR NEXT CHAPTER</button>
+		<button class="callToAction-main">LIGHT UP YOUR NEXT CHAPTER</button>
 		
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
 		
 		
-		<button class="callToAction-button">Sign In</button>
-		<button class="callToAction">Register</button> 
+		<button class="callToAction-access-button">Sign In</button>
+		<button class="callToAction-access-button">Register</button> 
 
 		
 	</main>	
@@ -45,8 +45,7 @@
 	<br>
   <footer>
 		<div class="textbox-footer">
-		<p>FOOTER FOOTER FOOTER</p> 
-	    <p>This site is designed by DesignSphere</p>	
+<p>This site is designed by DesignSphere</p>	
 		<img src="images/youtube 2.png" alt="youtube-icon" height="" width="" align="">
 		<img src="images/instagram.png" alt="instagram-icon" height="" width="" align="">
 		<img src="images/3d icon facebook.png" alt="facebook-icon" height="" width="" align="">
