updated the colors and box for callToAction-home-link-button, callToAction-pages-link-button, callToAction-main, callToAction-access-button

--- a/code/index.html
+++ b/code/index.html
@@ -9,15 +9,15 @@
 <div id="wrapper">
   <header>		
 	<nav>
-		<a href="index.html">Lumina</a> &nbsp;
-		<a href="healthwellness.html">Health and Wellness</a> &nbsp;
-		<a href="retirementplanning.html">Retirement Planning</a> &nbsp;
-		<a href="healthinsurance.html">Health and Insurance</a> &nbsp;
-		<a href="emergencyresourcesassistance.html">Emergency Resources and Assistance</a> &nbsp;
-		<a href="travelleisure.html">Travel and Leisure</a> &nbsp;
-		<a href="digitaltechresources.html">Digital and Technology Resources</a> &nbsp;
-		<a href="letstalk.html">Let's Talk About It</a> &nbsp;
-		<a href="faq.html">FAQ</a>
+		<a class="callToAction-home-link-button" href="index.html">Lumina</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="healthwellness.html">Health and Wellness</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="retirementplanning.html">Retirement Planning</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="healthinsurance.html">Health and Insurance</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="emergencyresourcesassistance.html">Emergency Resources and Assistance</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="travelleisure.html">Travel and Leisure</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="digitaltechresources.html">Digital and Technology Resources</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="letstalk.html">Let's Talk About It</a> &nbsp;
+		<a class="callToAction-pages-link-button" href="faq.html">FAQ</a>
 	</nav>
   </header>
 	
