--- a/code/index.html
+++ b/code/index.html
@@ -30,22 +30,25 @@
 	
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
 		
-		<h2>Exploring the World Beyond Tomorrow</h2>
+		<div class="name-of-page"> 
 		<button class="callToAction-main">LIGHT UP YOUR NEXT CHAPTER</button>
+		<h1>Exploring the<br>World Beyond<br>Tomorrow</h1>
+		</div>
 		
-		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
+		<p>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br> 
+		</p><br><br>
 		
-		
+		<div class="registraion-access">
 		<button class="callToAction-access-button">Sign In</button>
 		<button class="callToAction-access-button">Register</button> 
+		</div>
 
-		
 	</main>	
 	
 	<br>
   <footer>
 		<div class="textbox-footer">
-<p>This site is designed by DesignSphere</p>	
+		<p>FOOTER FOOTER FOOTER <br><br>This site is designed by DesignSphere</p>	
 		<img src="images/youtube 2.png" alt="youtube-icon" height="" width="" align="">
 		<img src="images/instagram.png" alt="instagram-icon" height="" width="" align="">
 		<img src="images/3d icon facebook.png" alt="facebook-icon" height="" width="" align="">
