Aliged the main and img into two clumns. Adjusted footer

--- a/code/index.html
+++ b/code/index.html
@@ -26,6 +26,9 @@
 	<img src="images/HomeLandingPage.jpg" alt="diverse group of elderly people" height="" width="" align="">
 	</div>
 	
+	<div class="left-colmn-content"> 
+		
+		
 	<main>
 	
 		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
@@ -43,7 +46,10 @@
 		<button class="callToAction-access-button">Register</button> 
 		</div>
 
+		
 	</main>	
+		
+	
 	
 	<br>
   <footer>
@@ -56,6 +62,9 @@
 		<img src="images/3d icon pinterest.png" alt="pinterest-icon" height="" width="" align="">
 	</div>
 	</footer>
-</div>
+		
+
+	</div>
+	</div>
 </body>
 </html>
