completed index page, sign in and register page. created remaining main pages for remaning nav titles. added images for nav pages.

--- a/code/index.html
+++ b/code/index.html
@@ -26,19 +26,20 @@
 	
 	<div class="left-colmn-content"> 
 	<main>
-		<p> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.<br> Add a body of text about the website. Add a body of text about the website.</p>
+		<br><br><br>
+		<p>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.</p>
 		
 		<div class="name-of-page"> 
 		<button class="callToAction-main">LIGHT UP YOUR NEXT CHAPTER</button>
 		<h1>Exploring the<br>World Beyond<br>Tomorrow</h1>
 		</div>
 		
-		<p>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br> 
+		<p>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.
 		</p><br><br>
 		
 		<div class="registraion-access">
-		<button class="callToAction-access-button">Sign In</button>
-		<button class="callToAction-access-button">Register</button> 
+		<a href="signin.html" class="callToAction-access-button">Sign In</a>
+		<a href="register.html" class="callToAction-access-button">Register</a> 
 		</div>
 	</main>	
 	<br>
