added subpages with corresponding images to the pages.

--- a/code/emergencyresourcesassistance.html
+++ b/code/emergencyresourcesassistance.html
@@ -20,12 +20,11 @@
         Add a body of text about the website. Add a body of text about the website.</p>
       <div class="name-of-page">
         <button class="callToAction-main">----</button>
-        <h1>Health &amp; Wellness</h1>
+        <h1>Emergency Resources <br>and Assistance</h1>
       </div>
 		<br><br>
-		<a class="subpages" href="sfal.html"><h2> Senior Fitness &amp; Active Living</h2></a><br>
-		<a class="subpages" href="hln.html"><h2> Healthy Living &amp; Nutrition</h2></a><br>
-		<a class="subpages" href="mhse.html"><h2> Mental Health &amp; Social Engagement</h2></a><br>
+			<a class="subpages" href="era1.html"><h2>Crisis &amp; Financial Aid</h2></a><br>
+		<a class="subpages" href="era2.html"><h2>Seniors Safety &amp; Legal Resoruces </h2></a><br>
       <br>
       <br>
       <br>
