--- a/code/faq.html
+++ b/code/faq.html
@@ -20,12 +20,12 @@
         Add a body of text about the website. Add a body of text about the website.</p>
       <div class="name-of-page">
         <button class="callToAction-main">----</button>
-        <h1>Health &amp; Wellness</h1>
+        <h1>FAQ &amp; Quick Links</h1>
       </div>
 		<br><br>
-		<a class="subpages" href="sfal.html"><h2> Senior Fitness &amp; Active Living</h2></a><br>
-		<a class="subpages" href="hln.html"><h2> Healthy Living &amp; Nutrition</h2></a><br>
-		<a class="subpages" href="mhse.html"><h2> Mental Health &amp; Social Engagement</h2></a><br>
+		<a class="subpages" href="faq1.html"><h2>Contact Us</h2></a><br>
+		<a class="subpages" href="faq2.html"><h2>Search</h2></a><br>
+		<a class="subpages" href="faq3.html"><h2>Chat Box</h2></a><br>
       <br>
       <br>
       <br>
