--- a/code/faq1.html
+++ b/code/faq1.html
@@ -10,7 +10,7 @@
   <header>
     <nav> <a class="callToAction-home-link-button" href="index.html">Lumina</a> &nbsp; <a class="callToAction-pages-link-button" href="healthwellness.html">Health and Wellness</a> &nbsp; <a class="callToAction-pages-link-button" href="retirementplanning.html">Retirement Planning</a> &nbsp; <a class="callToAction-pages-link-button" href="healthinsurance.html">Health and Insurance</a> &nbsp; <a class="callToAction-pages-link-button" href="emergencyresourcesassistance.html">Emergency Resources and Assistance</a> &nbsp; <a class="callToAction-pages-link-button" href="travelleisure.html">Travel and Leisure</a> &nbsp; <a class="callToAction-pages-link-button" href="digitaltechresources.html">Digital and Technology Resources</a> &nbsp; <a class="callToAction-pages-link-button" href="letstalk.html">Let's Talk About It</a> &nbsp; <a class="callToAction-pages-link-button" href="faq.html">FAQ</a> </nav>
   </header>
-  <div class="img_hlp_grpelders"> <img src="images/Digital & Technology Resources.jpg" alt="diverse group of elderly people" height="" width="" align=""> </div>
+  <div class="img_hlp_grpelders"> <img src="images/FAQ & Quick.jpg" alt="diverse group of elderly people" height="" width="" align=""> </div>
   <div class="left-colmn-content">
     <main> <br>
       <br>
@@ -20,13 +20,14 @@
         Add a body of text about the website. Add a body of text about the website.</p>
       <div class="name-of-page">
         <button class="callToAction-main">----</button>
-        <h1>Digital and <br>Technology Resources</h1>
+        <h1>Contact Us</h1>
       </div>
-		<br><br>
-		<a class="subpages" href="dtr1.html"><h2>Tech Basics &amp; Online Safety</h2></a><br>
-		
+		<p>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.
+		</p><br><br>
+      <!--		<div class="return-to-main-page">--> 
       <br>
       <br>
+      <a href="faq.html" class="return-to-main-page">Return to FAQ</a><br>
       <br>
       <!--		</div>--> 
     </main>
