--- a/code/letstalk.html
+++ b/code/letstalk.html
@@ -23,9 +23,9 @@
         <h1>Health &amp; Wellness</h1>
       </div>
 		<br><br>
-		<a class="subpages" href="sfal.html"><h2> Senior Fitness &amp; Active Living</h2></a><br>
-		<a class="subpages" href="hln.html"><h2> Healthy Living &amp; Nutrition</h2></a><br>
-		<a class="subpages" href="mhse.html"><h2> Mental Health &amp; Social Engagement</h2></a><br>
+		<a class="subpages" href="ltai1.html"><h2>We Have Time</h2></a><br>
+		<a class="subpages" href="ltai2.html"><h2>Pick Up The Phone</h2></a><br>
+		<a class="subpages" href="ltai3.html"><h2>Give an Hour</h2></a><br>
       <br>
       <br>
       <br>
