--- a/code/retirementplanning.html
+++ b/code/retirementplanning.html
@@ -20,12 +20,13 @@
         Add a body of text about the website. Add a body of text about the website.</p>
       <div class="name-of-page">
         <button class="callToAction-main">----</button>
-        <h1>Health &amp; Wellness</h1>
+        <h1>Retirement Planning</h1>
       </div>
 		<br><br>
-		<a class="subpages" href="sfal.html"><h2> Senior Fitness &amp; Active Living</h2></a><br>
-		<a class="subpages" href="hln.html"><h2> Healthy Living &amp; Nutrition</h2></a><br>
-		<a class="subpages" href="mhse.html"><h2> Mental Health &amp; Social Engagement</h2></a><br>
+		<a class="subpages" href="rp1.html"><h2>Financial Planning</h2></a><br>
+		<a class="subpages" href="rp2.html"><h2>Budget Tools</h2></a><br>
+		<a class="subpages" href="rp3.html"><h2> Investments &amp; Tax Planning</h2></a><br>
+		<a class="subpages" href="rp4.html"><h2>Smart Spending &amp; Discounts</h2></a><br>
       <br>
       <br>
       <br>
