--- a/code/dtr1.html
+++ b/code/dtr1.html
@@ -20,13 +20,14 @@
         Add a body of text about the website. Add a body of text about the website.</p>
       <div class="name-of-page">
         <button class="callToAction-main">----</button>
-        <h1>Digital and <br>Technology Resources</h1>
+        <h1>Tech Basics &amp; Online Safety</h1>
       </div>
-		<br><br>
-		<a class="subpages" href="dtr1.html"><h2>Tech Basics &amp; Online Safety</h2></a><br>
-		
+		<p>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.<br>Add a body of text about the website. Add a body of text about the website.
+		</p><br><br>
+      <!--		<div class="return-to-main-page">--> 
       <br>
       <br>
+      <a href="digitaltechresources.html" class="return-to-main-page">Return to Digital and Technology Resources</a><br>
       <br>
       <!--		</div>--> 
     </main>
