--- a/code/healthinsurance.html
+++ b/code/healthinsurance.html
@@ -20,12 +20,13 @@
         Add a body of text about the website. Add a body of text about the website.</p>
       <div class="name-of-page">
         <button class="callToAction-main">----</button>
-        <h1>Health &amp; Wellness</h1>
+        <h1>Health &amp; Insurance</h1>
       </div>
 		<br><br>
-		<a class="subpages" href="sfal.html"><h2> Senior Fitness &amp; Active Living</h2></a><br>
-		<a class="subpages" href="hln.html"><h2> Healthy Living &amp; Nutrition</h2></a><br>
-		<a class="subpages" href="mhse.html"><h2> Mental Health &amp; Social Engagement</h2></a><br>
+		<a class="subpages" href="hi1.html"><h2>Long-term Care &amp; Insurance</h2></a><br>
+		<a class="subpages" href="hi2.html"><h2>Medicare &amp; Medicade </h2></a><br>
+		<a class="subpages" href="hi3.html"><h2>Managing Medical Expenses</h2></a><br>
+      <br>
       <br>
       <br>
       <br>
