--- a/code/travelleisure.html
+++ b/code/travelleisure.html
@@ -20,12 +20,12 @@
         Add a body of text about the website. Add a body of text about the website.</p>
       <div class="name-of-page">
         <button class="callToAction-main">----</button>
-        <h1>Health &amp; Wellness</h1>
+        <h1>Travel and Leisure</h1>
       </div>
 		<br><br>
-		<a class="subpages" href="sfal.html"><h2> Senior Fitness &amp; Active Living</h2></a><br>
-		<a class="subpages" href="hln.html"><h2> Healthy Living &amp; Nutrition</h2></a><br>
-		<a class="subpages" href="mhse.html"><h2> Mental Health &amp; Social Engagement</h2></a><br>
+		<a class="subpages" href="tl1.html"><h2>Destination &amp; Travel Planning</h2></a><br>
+		<a class="subpages" href="tl2.html"><h2>Group &amp; Solo Travel</h2></a><br>
+		<a class="subpages" href="tl3.html"><h2>Senior Travel &amp; Discounts</h2></a><br>
       <br>
       <br>
       <br>
